--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title:       Pixyll
-email:       your_email@example.com
-author:      John Otander
-description: "A simple, beautiful theme for Jekyll that emphasizes content rather than aesthetic fluff."
+title:       Baek STUDIO
+email:       sosaer88@gmail.com
+author:      Baek Jueun
+description: "Baek STUDIO blog"
 baseurl:     ""
-url:         "http://pixyll.com"
+url:         "https://baekjueun.github.io"
 date_format: "%b %-d, %Y"
 header_pages:
  - about.md
