--- a/js-doc/package.json
+++ b/js-doc/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "jsdoc ./src/index.js"
+    "start": "jsdoc ./src/js"
   },
   "keywords": [],
   "author": "",
