--- a/package.json
+++ b/package.json
@@ -4,9 +4,18 @@
   "description": "A simple starter to get up and developing quickly with Gatsby",
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "babelMacros": {
+    "twin": {
+      "config": "tailwind.config.js",
+      "preset": "styled-components",
+      "autoCssProp": true,
+      "hasSuggestions": true
+    }
+  },
   "dependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
+    "@types/styled-components": "^5.1.15",
     "gatsby": "^4.1.1",
     "gatsby-plugin-emotion": "^7.1.0",
     "gatsby-plugin-gatsby-cloud": "^4.1.0",
@@ -14,13 +23,16 @@
     "gatsby-plugin-offline": "^5.1.0",
     "gatsby-plugin-react-helmet": "^5.1.0",
     "gatsby-plugin-sharp": "^4.1.0",
+    "gatsby-plugin-styled-components": "^5.1.0",
     "gatsby-plugin-typescript": "^4.1.0",
     "gatsby-source-filesystem": "^4.1.0",
     "gatsby-transformer-sharp": "^4.1.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "styled-components": "^5.3.3",
+    "tailwindcss": "^2.2.19"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.3.1",
@@ -30,7 +42,9 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.26.1",
     "prettier": "^2.4.1",
-    "typescript": "^4.4.4"
+    "twin.macro": "^2.8.1",
+    "typescript": "^4.4.4",
+    "typescript-plugin-tw-template": "^2.1.0"
   },
   "keywords": [
     "gatsby"
