--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
+    "@tailwindcss/line-clamp": "^0.2.2",
     "@types/styled-components": "^5.1.15",
     "gatsby": "^4.1.1",
     "gatsby-plugin-emotion": "^7.1.0",
