--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "dependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "@tailwindcss/line-clamp": "^0.2.2",
     "@types/styled-components": "^5.1.15",
     "gatsby": "^4.1.1",
