--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@tailwindcss/line-clamp": "^0.2.2",
+    "@types/react-helmet": "^6.1.4",
     "@types/styled-components": "^5.1.15",
     "gatsby": "^4.1.1",
     "gatsby-plugin-emotion": "^7.1.0",
