--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "@types/react-helmet": "^6.1.4",
     "@types/styled-components": "^5.1.15",
     "gatsby": "^4.1.1",
+    "gatsby-plugin-canonical-urls": "^4.1.0",
     "gatsby-plugin-emotion": "^7.1.0",
     "gatsby-plugin-gatsby-cloud": "^4.1.0",
     "gatsby-plugin-image": "^2.1.2",
     "gatsby-plugin-offline": "^5.1.0",
     "gatsby-plugin-react-helmet": "^5.1.0",
+    "gatsby-plugin-robots-txt": "^1.6.14",
     "gatsby-plugin-sharp": "^4.1.3",
+    "gatsby-plugin-sitemap": "^5.1.1",
     "gatsby-plugin-styled-components": "^5.1.0",
     "gatsby-plugin-typescript": "^4.1.0",
     "gatsby-remark-copy-linked-files": "^5.1.0",
