--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-simple-import-sort": "^7.0.0",
+    "gh-pages": "^3.2.3",
     "prettier": "^2.4.1",
     "twin.macro": "^2.8.1",
     "typescript": "^4.4.4",
