--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "gatsby-plugin-canonical-urls": "^4.1.0",
     "gatsby-plugin-emotion": "^7.1.0",
     "gatsby-plugin-gatsby-cloud": "^4.1.0",
+    "gatsby-plugin-google-adsense": "^1.1.3",
+    "gatsby-plugin-google-analytics": "^4.1.0",
     "gatsby-plugin-image": "^2.1.2",
     "gatsby-plugin-offline": "^5.1.0",
     "gatsby-plugin-react-helmet": "^5.1.0",
