--- a/package.json
+++ b/package.json
@@ -13,18 +13,20 @@
     "@emotion/react": "^11.10.4",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.4",
-    "next": "13.1.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "@notionhq/client": "^2.2.3",
     "axios": "^1.1.2",
     "immer": "^9.0.15",
     "lodash-es": "^4.17.21",
+    "next": "13.1.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-query": "^3.39.2",
     "zustand": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "@emotion/babel-plugin": "^11.10.2",
+    "@next/font": "13.1.1",
     "@types/lodash-es": "^4.17.6",
     "@types/node": "18.11.18",
     "@types/prettier": "^2.7.1",
@@ -32,7 +34,6 @@
     "@types/react-dom": "18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
-    "@next/font": "13.1.1",
     "babel-loader": "^8.2.5",
     "babel-plugin-react-require": "^3.1.3",
     "eslint": "8.22.0",
