feat: post page

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -51,6 +51,12 @@
       ],
       "~styles/*": [
         "styles/*"
+      ],
+      "~utils": [
+        "utils"
+      ],
+      "~utils/*": [
+        "utils/*"
       ]
     },
     "types": [
